--- a/03_Summarising.ipynb
+++ b/03_Summarising.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO4mSzQabtAlSzs6B71XpFW",
+      "authorship_tag": "ABX9TyOMRpHU5i8OC0sXIRoJ15IA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -419,7 +419,20 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "for i in range(len(reviews)):\n",
+        "    prompt = f\"\"\"\n",
+        "    Your task is to extract the sentiment of a product \\ \n",
+        "    review from an ecommerce site. \n",
+        "\n",
+        "    Use a sentence to describe the sentiment. \n",
+        "\n",
+        "    Review: ```{reviews[i]}```\n",
+        "    \"\"\"\n",
+        "\n",
+        "    response = get_completion(prompt)\n",
+        "    print(i, response, \"\\n\")"
+      ],
       "metadata": {
         "id": "04IQt-0YHpZj"
       },
